Desenvolvimento da edição de postagens

--- a/apps/backend/views/settings/graphics.phtml
+++ b/apps/backend/views/settings/graphics.phtml
@@ -1,9 +1,9 @@
 <div class="panel-heading">
-    Acessos
+    <i class="glyphicon glyphicon-stats"></i> Acessos
     <div class="pull-right">
         <div class="btn-group">
             <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-            Actions
+             Actions
             <span class="caret"></span>
             </button>
             <ul class="dropdown-menu pull-right" role="menu">
