--- a/apps/backend/views/settings/sidebar.phtml
+++ b/apps/backend/views/settings/sidebar.phtml
@@ -13,7 +13,7 @@
     <a href="#sub-posts" class="list-group-item strong" data-toggle="collapse" data-parent="#MainMenu"><i class="glyphicon glyphicon-tags"></i> Posts </a>
     <div class="collapse" id="sub-posts">
         <a href="#" class="list-group-item" id="new-post"><i class="glyphicon glyphicon-plus"></i> Novo</a>
-        <a href="#" class="list-group-item" id="edit-post"><i class="glyphicon glyphicon-edit"></i> Editar</a>
+        <a href="#lastPosts" class="list-group-item" id="edit-post"><i class="glyphicon glyphicon-edit"></i> Editar</a>
         <a href="#" class="list-group-item" id="remove-post"><i class="glyphicon glyphicon-remove"></i> Excluir</a>
     </div>
     <!-- /sub-posts -->
@@ -73,4 +73,8 @@ $("#theme-editor").click(function(){
 $("#new-post").click(function(){
     $.loadPartialView('main', '<?= URL_PROJECT?>post/index');
 });
+
+$("#edit-post").click(function(){
+    $.loadPartialView('main', '<?= URL_PROJECT?>post/listPosts');
+})
 </script>
