--- a/apps/frontend/views/index.phtml
+++ b/apps/frontend/views/index.phtml
@@ -11,7 +11,7 @@ footer {
 <html class="no-js" lang="br">
     <head>
         <meta charset="utf-8">
-        <title><?= $title ?></title>
+        <title><?= $layout->layout_title ?></title>
         <meta name="description" content="<?= $layout->layout_title ?>">
         <meta name="author" content="viniciusilveira">
         <link rel="shortcut icon" href="<?= URL_PROJECT ?>img/logo.png"/>
