Adicionado view para listagem de blogs

--- a/apps/backend/views/index.phtml
+++ b/apps/backend/views/index.phtml
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/timeline.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/dashboard.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap-datepicker.min.css"/>
+        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/dataTables.bootstrap.css"/>
 
         <!--[if lt IE 9]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -31,6 +32,7 @@
         <script src="<?= URL_PROJECT ?>js/chart.min.js"> </script>
         <script src="<?= URL_PROJECT ?>js/tinymce/tinymce.min.js"> </script>
         <script src="<?= URL_PROJECT ?>js/bootstrap-datepicker.min.js"> </script>
+        <script src="<?= URL_PROJECT ?>js/dataTables.bootstrap.min.js"> </script>
         <script src="<?= URL_PROJECT ?>js/custom.js"> </script>
 
         <?= $this->getContent(); ?>
