--- a/apps/frontend/views/index/index.phtml
+++ b/apps/frontend/views/index/index.phtml
@@ -43,7 +43,7 @@
             <hr>
             <img class="img-responsive" src="http://placehold.it/900x300" alt="">
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec mollis libero, sit amet malesuada dolor. Phasellus cursus ullamcorper sem, ac molestie velit laoreet id. Donec quis augue risus. Cras vitae enim eleifend, malesuada felis et, blandit metus. Etiam dignissim hendrerit ligula eget facilisis. Aliquam ante mauris, ultricies consequat nisi vestibulum, vulputate ornare diam. Integer ullamcorper ac neque vitae semper. Quisque pharetra tincidunt fermentum. Nam felis sem, sollicitudin cursus volutpat eu, consectetur eget tellus. Donec sagittis sem sit amet erat porta dapibus. Phasellus risus nisl, dignissim eu vulputate nec, lacinia nec turpis. Nulla lorem libero, malesuada eu purus et, fermentum facilisis lectus.</p>
             <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
             <hr>
             <hr>
