--- a/apps/backend/views/settings/index.phtml
+++ b/apps/backend/views/settings/index.phtml
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index"><i class="glyphicon glyphicon-home"></i> Pluton</a>
+            <a class="navbar-brand" href="settings"><i class="glyphicon glyphicon-home"></i> Pluton</a>
         </div>
         <!-- /.navbar-header -->
         <ul class="nav navbar-top-links navbar-right">
