--- a/apps/backend/views/post/index.phtml
+++ b/apps/backend/views/post/index.phtml
@@ -11,10 +11,11 @@
             <div class="col-sm-12">
                 <div class="row">
                     <form method="POST" id="newPost" class="form-horizontal" role="form">
+                        <input type="hidden" name="post_id" id="inputPost_id" class="form-control" value="<?= $post->post_id ?>">
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <input type="text" name="post_title" id="inputPost_title" class="form-control" placeholder="Título" required="required" pattern="" title="">
+                                    <input type="text" name="post_title" id="inputPost_title" class="form-control" placeholder="Título" required="required" pattern="" title="" value ="<?= $post->post_title ?>">
                                 </div>
                             </div>
                             <div class="row">
@@ -26,7 +27,10 @@
                                 <div class="col-sm-4">
                                     <select name="post_author" id="inputPost_author" class="form-control" required="required">
                                         <option value="">Autor</option>
-                                        <option value="<?= $author->user_id ?>"><?= $author->user_name ?></option>
+                                        <option value="<?= $author->user_id ?>"
+                                            <?= $post->author->user_id == $author->user_id ? "selected" : "" ?>
+                                        >
+                                            <?= $author->user_name ?></option>
                                     </select>
                                 </div>
                                 <div class="col-sm-4">
@@ -34,7 +38,9 @@
                                         <option value="">Status</option>
                                         <?php foreach($post_status as $status){ ?>
                                             <?php if($status->post_status_id != 1 || $author->user_type_id != 5 ){ ?>
-                                                <option value="<?= $status->post_status_id ?>"><?= $status->post_status_name ?></option>
+                                                <option value="<?= $status->post_status_id ?>"
+                                                    <?= $post->post_status_id == $status->post_status_id ? "selected" : "" ?>
+                                                ><?= $status->post_status_name ?></option>
                                             }
                                             <?php }?>
                                         <?php } ?>
@@ -42,14 +48,14 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="input-group date">
-                                        <input type="text" name="post_date_posted" id="inputPost_date_posted" readonly class="form-control datepicker" placeholder="Data" required="required">
+                                        <input type="text" name="post_date_posted" id="inputPost_date_posted" readonly class="form-control datepicker" placeholder="Data" required="required" value="<?= $post_date ?>">
                                         <span class="input-group-addon icon-date"><i class="glyphicon glyphicon-calendar"></i></span>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-sm-6 ui-widget">
-                                    <input type="text" name="list_categories" id="inputList-Categories" readonly class="form-control" placeholder="Lista de Categorias" required="required" pattern="" title="">
+                                    <input type="text" name="list_categories" id="inputList-Categories" readonly class="form-control" placeholder="Lista de Categorias" required="required" pattern="" title="" value="<?= $post_categories[$post->post_id] ?>">
                                 </div>
                                 <div class="col-sm-2">
                                     <button type="button" id="clean-categories" class="btn btn-info">Limpar</button>
@@ -136,7 +142,7 @@ var Categories = function(){
 
 var Form = function(){
 
-    this.validateForm = function(){
+    this.validateForm = function(edit_post){
         var validate = true;
         var array_form = $("#newPost").serializeArray();
         $.each(array_form, function(i, field){
@@ -161,12 +167,12 @@ var Form = function(){
             });
             validate = false;
         }
-        if(validate) formSubmit();
+        if(validate) formSubmit(edit_post);
     }
 
-    var formSubmit = function(){
+    var saveData = function(url){
         $.ajax({
-            url:'<?= URL_PROJECT ?>post/newPost',
+            url: url,
             data: $("#newPost").serialize() + '&post_content=' + tinyMCE.activeEditor.getContent(),
             dataType: 'json',
             type: 'post',
@@ -188,6 +194,17 @@ var Form = function(){
                 }
             }
         });
+    }
+
+     /**
+     * Envia os dados preenchidos no formulário para o servidor inserir na base de dados
+     */
+    var formSubmit = function(edit_post){
+        if(!edit_post){
+            saveData('<?= URL_PROJECT ?>post/newPost');
+        } else{
+            saveData('<?= URL_PROJECT ?>post/editPost');
+        }
     }
 }
 
@@ -222,6 +239,7 @@ $("#add-categorie").click(function(){
 tinymce.init({
     selector: "textarea",
     theme: "modern",
+    init_instance_callback: "insert_contents",
     plugins: [
         "advlist autolink lists link image charmap print preview hr anchor pagebreak",
         "searchreplace wordcount visualblocks visualchars code fullscreen",
@@ -235,9 +253,14 @@ tinymce.init({
         {title: 'Test template 1', content: 'Test 1'},
         {title: 'Test template 2', content: 'Test 2'}
     ],
+    title: 'post_content',
     language: 'pt_BR'
+
 });
 
+function insert_contents(inst){
+    inst.setContent('<?= $post_content ?>');
+}
 /**
  * Carrega o datepicker
  */
@@ -246,9 +269,9 @@ $(".datepicker").datepicker({
     language: 'pt-BR',
     autoclose: 'enable'
 });
-
+var edit_post = '<?= $edit_post ?>';
 $("#save-post").click(function(){
     var form = new Form;
-    form.validateForm();
+    form.validateForm(edit_post);
 });
 </script>
