--- a/apps/backend/views/post/listPosts.phtml
+++ b/apps/backend/views/post/listPosts.phtml
@@ -83,7 +83,7 @@ function queryParams() {
 */
 function actionFormatter(value, row, index) {
     return [
-        '<a class="edit ml10" href="javascript:void(0)" title="Edit">',
+        '<a class="edit ml10" href="javascript:void(0)" title="Editar">',
         '<i class="glyphicon glyphicon-edit"></i>',
         '</a>'
     ].join('');
