--- a/apps/backend/views/settings/listUsers.phtml
+++ b/apps/backend/views/settings/listUsers.phtml
@@ -47,7 +47,7 @@
     */
     function actionFormatter(value, row, index) {
         return [
-            '<a class="edit ml10" href="javascript:void(0)" title="Edit">',
+            '<a class="edit ml10" href="javascript:void(0)" title="Editar">',
             '<i class="glyphicon glyphicon-edit"></i>',
             '</a>'
         ].join('');
