--- a/apps/frontend/views/index/posts.phtml
+++ b/apps/frontend/views/index/posts.phtml
@@ -1,21 +1,25 @@
 <!-- First Blog Post -->
 <?php if(!$_REQUEST["editor"]) { ?>
-	<?php foreach($posts as $post){ ?>
-	<h2>
-	<a href="#"><?= $post->post_title ?></a>
-	</h2>
-	<p class="lead">
-	by <a href="index.php"><?= $post->author->user_login ?></a>
-	</p>
-	<p><span class="glyphicon glyphicon-time"></span> Publicado em <?= $post->post_date_posted ?></p>
-	<hr>
-	<div class="div-post"><?= html_entity_decode($post->post_content) ?>...</div>
-	<hr>
-	<form name="load-post" id="load-post" action="<?= URL_PROJECT ?>index/postPage" method="post">
-		<input type="hidden" name="post_id" id="post_id" value="<?= $post->post_id ?>"class="form-control" value="">
-		<input type="submit" class="btn btn-primary" value="Leia Mais"></span>
-	</form>
-<?php } ?>
+	<?php $cont = 0;
+	foreach($posts as $post){
+		if($cont == 0) $first_post = $post->post_id;
+		$cont++; ?>
+		<h2>
+		<a href="#"><?= $post->post_title ?></a>
+		</h2>
+		<p class="lead">
+		by <a href="index.php"><?= $post->author->user_login ?></a>
+		</p>
+		<p><span class="glyphicon glyphicon-time"></span> Publicado em <?= $post->post_date_posted ?></p>
+		<hr>
+		<div class="div-post"><?= html_entity_decode($post->post_content) ?>...</div>
+		<hr>
+		<form name="load-post" id="load-post" action="<?= URL_PROJECT ?>index/postPage/<?= $post_title[$post->post_id] ?>" method="post">
+			<input type="hidden" name="post_id" id="post_id" value="<?= $post->post_id ?>"class="form-control" value="">
+			<input type="submit" class="btn btn-primary" value="Leia Mais"></span>
+		</form>
+		<?php $last_id = $post->post_id ?>
+	<?php } ?>
 <?php } else{ ?>
 	<img class="img-responsive" src="http://placehold.it/900x300" alt="">
 	<hr>
