paginação do blog

--- a/apps/backend/views/settings/lastPosts.phtml
+++ b/apps/backend/views/settings/lastPosts.phtml
@@ -1,5 +1,5 @@
 <style>
-.timeline-body p {
+.timeline-body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -7,6 +7,9 @@
 }
 
 .timeline-body p img{
+    display: none;
+}
+.timeline-body div img{
     display: none;
 }
 </style>
