--- a/apps/backend/views/settings/index.phtml
+++ b/apps/backend/views/settings/index.phtml
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="settings"><i class="glyphicon glyphicon-home"></i> Pluton</a>
+            <a class="navbar-brand" href="<?= URL_PROJECT ?>settings"><i class="glyphicon glyphicon-home"></i> Pluton</a>
         </div>
         <!-- /.navbar-header -->
         <ul class="nav navbar-top-links navbar-right">
@@ -142,14 +142,14 @@
         <!-- /.navbar-top-links -->
         <div class="navbar-default sidebar navbar-collapse" role="navigation">
             <div id="MainMenu">
-                <li class="sidebar-search">
+                <div class="sidebar-search">
                     <div class="input-group">
                         <?php $img_profile = ($user_img == NULL) ? URL_PROJECT . "img/users/defaultProfile.png" : URL_PROJECT . "img/users/" . $user_img ?>
                         <img width="35%" class="img-circle" src="<?= $img_profile; ?>">
                         <label style="margin-left: 20px;">Bem vindo<br/> <?= $user ?></label>
                     </div>
                     <!-- /input-group -->
-                </li>
+                </div>
                 <!-- /sidebar-search -->
                 <?= $this->partial('settings/sidebar'); ?>
             </div>
