--- a/apps/backend/views/settings/index.phtml
+++ b/apps/backend/views/settings/index.phtml
@@ -144,7 +144,7 @@
             <div id="MainMenu">
                 <div class="sidebar-search">
                     <div class="input-group">
-                        <?php $img_profile = ($user_img == NULL) ? URL_PROJECT . "img/users/defaultProfile.png" : URL_PROJECT . "img/users/" . $user_img ?>
+                        <?php $img_profile = ($user_img == NULL) ? URL_PROJECT . "img/defaultProfile.png" : URL_PROJECT . "img/users/" . $user_img ?>
                         <img width="35%" class="img-circle" src="<?= $img_profile; ?>">
                         <label style="margin-left: 20px;">Bem vindo<br/> <?= $user ?></label>
                     </div>
