Correção tinymce para salvar acentos no banco de dados

--- a/apps/backend/views/post/index.phtml
+++ b/apps/backend/views/post/index.phtml
@@ -253,6 +253,7 @@ tinymce.init({
         {title: 'Test template 1', content: 'Test 1'},
         {title: 'Test template 2', content: 'Test 2'}
     ],
+    entity_encoding : "raw",
     title: 'post_content',
     language: 'pt_BR'
 
