--- a/apps/backend/views/post/listPosts.phtml
+++ b/apps/backend/views/post/listPosts.phtml
@@ -1,9 +1,9 @@
-<!-- /.row -->
+
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Lista de posts
+               <label style="font-size: 30px"><i class="glyphicon glyphicon-list"></i> Lista de posts </label>
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
