--- a/apps/backend/views/settings/newUser.phtml
+++ b/apps/backend/views/settings/newUser.phtml
@@ -3,15 +3,22 @@
     img{cursor: pointer;}
     .div-img-profile{display:inline-block; width:128px; height:128px;}
 </style>
-<div class="col-lg-8">
-    <div class="panel panel-default">
+<div class="col-lg-12">
+    <hr>
+    <hr>
+    <div class="panel panel-default" >
         <div class="panel-heading">
-            Novo Usuário
+            <?php if($edit_user){ ?>
+                <label style="font-size: 30px;"><i class="glyphicon glyphicon-edit"></i> Editar Usuário</label>
+            <?php } else{?>
+                <label style="font-size: 30px;"><i class="glyphicon glyphicon-plus"></i> Novo Usuário</label>
+            <?php } ?>
+
         </div>
         <!-- /.panel-heading -->
-        <div class="panel-body">
+        <div class="panel-body" style="margin-left: 18%;">
             <form id="form-newuser" action="" method="POST" class="form-horizontal" enctype='multipart/form-data' target='ihide'>
-                <div class="col-sm-12">
+                <div class="col-sm-8">
                     <div class="row">
                         <div class="col-sm-2 div-img-profile">
                             <img src="http://www.placecage.com/g/200/300"  name="preview_img" id="imgPreview_img" class="img-responsive img-thumbnail" alt="Image">
@@ -22,6 +29,7 @@
                         <div class="col-sm-10">
                             <input type="email" name="user_email" id="inputUser_email" class="form-control" value="" required="required" placeholder="E-mail">
                         </div>
+
                         <div class="col-sm-5">
                             <input type="text" name="user_login" id="inputUser_login" class="form-control" value="" required="required" placeholder="Login">
                         </div>
@@ -121,6 +129,10 @@ var Form = function(){
                 success: function(data){
                     if(data.success){
                         swal.success('Dados Salvos com sucesso');
+                        $(".confirm").click(function(){
+                            $.loadPartialView('main', '<?= URL_PROJECT?>settings/listUsers');
+                            $("#panel, #top-menu").attr("hidden", true);
+                        });
                     } else{
                         swal.error(data.message);
                     }
