--- a/apps/backend/views/settings/notificationPanel.phtml
+++ b/apps/backend/views/settings/notificationPanel.phtml
@@ -1,4 +1,4 @@
-<div class="col-lg-4">
+<div class="col-lg-4" id="panel">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <i class="fa fa-bell fa-fw"></i> Painel de Notificações
