--- a/apps/frontend/views/index/navBar.phtml
+++ b/apps/frontend/views/index/navBar.phtml
@@ -1,22 +1,31 @@
-<nav id="top-navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="<?= URL_PROJECT ?>index" data-id="title"><?= html_entity_decode($layout->layout_title) ?></a>
+<style>
+    #top-navbar{
+        position: relative !important;
+        margin-top: -70px !important;
+    }
+</style>
+
+<div>
+    <nav id="top-navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="<?= URL_PROJECT ?>index" data-id="title"><?= html_entity_decode($layout->layout_title) ?></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" data-id="navbar" id="navbar">
+                <?= html_entity_decode($layout->layout_navbar) ?>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" data-id="navbar" id="navbar">
-            <?= html_entity_decode($layout->layout_navbar) ?>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
+        <!-- /.container -->
+    </nav>
+</div>
 <div class="page-header" data-id="subtitle">
-<?= html_entity_decode($layout->layout_subtitle) ?>
+    <?= html_entity_decode($layout->layout_subtitle) ?>
